--- a/index.html
+++ b/index.html
@@ -461,26 +461,64 @@
         // Fallback: manual game list (you can add more here)
         // This list will be used if games.json doesn't exist
         const knownGames = [
-          'slope',
-          'tunnel-rush',
-          'run-3',
-          'geometry-dash',
-          'happy-wheels',
-          'super-mario-64',
-          'minecraft-classic',
-          'tetris',
-          'pac-man',
-          'space-invaders',
-          'doom',
-          'portal',
-          'half-life',
-          'counter-strike',
-          'fnaf',
+          'slope 3',
+          'the man from the window',
+          'traffic jam 3d',
+          'two ball',
+          '1v1space',
+          '2 minute football',
+          '3dash',
+          '10 minutes till dawn',
           '2048',
-          'flappy-bird',
-          'angry-birds',
-          'subway-surfers',
-          'temple-run'
+          'a day in the office',
+          'backrooms 2D',
+          'bad-parenting',
+          'barry has a secret',
+          'baseball bros',
+          'basket stars',
+          'bounce back',
+          'crazy chicken 3D',
+          'csgo surf',
+          'dreader',
+          'drift-hunters',
+          'drivemad',
+          'eagle ride',
+          'edys car simulator',
+          'evade',
+          'evil nun schools out',
+          'extremerun3d',
+          'fearstofathom',
+          'final earth 2',
+          'flight sim',
+          'fnaf',
+          'fnaf2',
+          'fruit ninja',
+          'granny',
+          'granny 3',
+          'gunspin',
+          'half life',
+          'jelly drift',
+          'mari0',
+          'obby but your on a bike',
+          'obby robby only up',
+          'pico 8 games',
+          'pixel combat 2',
+          'qwop',
+          'retrobowl',
+          'rodha',
+          'rooftop snipers 2',
+          'slender multiplayer',
+          'slide in the woods',
+          'slope 3',
+          'sprunked',
+          'stackball.io',
+          'stacktris',
+          'station 141',
+          'steal brainrot',
+          'Stickman Clash',
+          'STICKMAN GTA',
+          'ultimate car driving',
+          'you vs 100 skibidi'
         ];
 
         // Check which games actually exist
