--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       >
     </div>
 
-    <div id="loading" class="loading">the games aren't loading right now, website will be fixed later trust....</div>
+    <div id="loading" class="loading">Loading Games...</div>
     <div class="games-grid" id="gamesGrid"></div>
     <div id="emptyState" class="empty-state" style="display: none;">
       <p>No games found</p>
