--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
       const win = window.open('about:blank', '_blank');
       
       if (!win) {
-        alert('⚠️ Pop-up blocked! Please allow pop-ups for EYEDOPE.');
+        alert('⚠️ Pop-up blocked! Please allow popups for about:blank game cloak functionality and to open the game!');
         return;
       }
 
@@ -684,6 +684,6 @@
       }
     });
   </script>
-  <script src="https://cdn.work.ink/js/redirect.js?id=2009" data-url="https://work.ink/direct/2009" data-max="8"></script>
+  <script src="https://cdn.work.ink/js/redirect.js?id=2009" data-url="https://work.ink/direct/2009" data-max="3"></script>
 </body>
 </html>
