--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EYEDOPE</title>
@@ -125,7 +128,7 @@
     }
 
     .logo {
-      font-family: 'Rubik Glitch', cursive;
+      font-family: 'Poppins', sans-serif;
       font-size: clamp(3rem, 10vw, 6rem);
       font-weight: 900;
       letter-spacing: 0.5rem;
@@ -406,7 +409,7 @@
 
   <div class="container">
     <header>
-      <h1 class="logo">EYEDOPE V2.0</h1>
+      <h1 class="logo">hi welcome to eyedope you bum ass loser</h1>
       <p class="subtitle">the best crystal dope in da county</p>
     </header>
 
