--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     .logo {
       font-family: 'Poppins', sans-serif;
-      font-size: clamp(3rem, 10vw, 6rem);
+      font-size: 50px;
       font-weight: 900;
       letter-spacing: 0.5rem;
       text-transform: uppercase;
@@ -409,8 +409,8 @@
 
   <div class="container">
     <header>
-      <h1 class="logo">hi welcome to eyedope you bum ass loser</h1>
-      <p class="subtitle">the best crystal dope in da county</p>
+      <h1 class="logo">eyedope</h1>
+      <p class="subtitle">the best eye dope in da county</p>
     </header>
 
     <div class="search-container">
